# shtemplate

./: .gitignore  CMakeLists.txt  README.md
.shci/linux/: build.sh
.shci/windows/: build-output.txt  build.bat  log.md  prerequisites.bat
docs/: Doxyfile.in
shtemplate/include/shtemplate/: shtemplate.h
